// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreviewProgressBar /> should render correctly an external project with counter 1`] = `
<Fragment>
  <ProjectPreviewExternalCounters__Container
    className="mb-15"
  >
    <Icon
      name="link"
      size={14}
    />
    <a
      href="https://github.com/cap-collectif/platform/issues/8639"
    >
      https://github.com/cap-collectif/platform/issues/8639
    </a>
  </ProjectPreviewExternalCounters__Container>
  <TagsList>
    <ProjectPreviewCounter
      icon="cap-baloon-1"
      label="project.preview.counters.contributions"
      showZero={true}
      value={71}
    />
    <ProjectPreviewCounter
      icon="cap-hand-like-2-1"
      label="project.preview.counters.votes"
      showZero={true}
      value={48}
    />
    <ProjectPreviewCounter
      icon="cap-user-2-1"
      label="project.preview.counters.contributors"
      showZero={true}
      value={48}
    />
    <ForwardRef(Relay(ProjectRestrictedAccessFragment))
      icon="cap-lock-2-1"
      project={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "contributionsCount": 71,
          "contributors": Object {
            "totalCount": 48,
          },
          "externalLink": "https://github.com/cap-collectif/platform/issues/8639",
          "id": "externalProject",
          "votes": Object {
            "totalCount": 48,
          },
        }
      }
    />
  </TagsList>
</Fragment>
`;

exports[`<ProjectPreviewProgressBar /> should render correctly an external project without counters 1`] = `
<Fragment>
  <ProjectPreviewExternalCounters__Container
    className="mb-15"
  >
    <Icon
      name="link"
      size={14}
    />
    <a
      href="https://github.com/cap-collectif/platform/issues/8639"
    >
      https://github.com/cap-collectif/platform/issues/8639
    </a>
  </ProjectPreviewExternalCounters__Container>
  <TagsList>
    <ProjectPreviewCounter
      icon="cap-baloon-1"
      label="project.preview.counters.contributions"
      showZero={true}
      value={0}
    />
    <ProjectPreviewCounter
      icon="cap-hand-like-2-1"
      label="project.preview.counters.votes"
      showZero={true}
      value={0}
    />
    <ProjectPreviewCounter
      icon="cap-user-2-1"
      label="project.preview.counters.contributors"
      showZero={true}
      value={0}
    />
    <ForwardRef(Relay(ProjectRestrictedAccessFragment))
      icon="cap-lock-2-1"
      project={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "contributionsCount": 0,
          "contributors": Object {
            "totalCount": 0,
          },
          "externalLink": "https://github.com/cap-collectif/platform/issues/8639",
          "id": "externalProject",
          "votes": Object {
            "totalCount": 0,
          },
        }
      }
    />
  </TagsList>
</Fragment>
`;
